--- a/WordRunnerSmartwatch/app/src/main/res/layout/activity_main.xml
+++ b/WordRunnerSmartwatch/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     app:rectLayout="@layout/rect_activity_main"
     app:roundLayout="@layout/round_activity_main"
-    tools:context="com.apps.greyrobe.wordrunnersmartwatchandroid.MainActivity"
+    tools:context="com.apps.greyrobe.wordrunner.MainActivity"
     tools:deviceIds="wear">
 
 </android.support.wearable.view.WatchViewStub>
