--- a/WordRunnerSmartwatch/app/src/main/res/layout/rect_activity_main.xml
+++ b/WordRunnerSmartwatch/app/src/main/res/layout/rect_activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.apps.greyrobe.wordrunnersmartwatchandroid.MainActivity"
+    tools:context="com.apps.greyrobe.wordrunner.MainActivity"
     tools:deviceIds="wear_square">
 
     <TextView
