--- a/WordRunnerSmartwatch/app/src/main/res/layout/round_activity_main.xml
+++ b/WordRunnerSmartwatch/app/src/main/res/layout/round_activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.apps.greyrobe.wordrunnersmartwatchandroid.MainActivity"
+    tools:context="com.apps.greyrobe.wordrunner.MainActivity"
     tools:deviceIds="wear_round">
 
     <TextView
