--- a/WordRunnerSmartwatch/app/src/main/res/layout/activity_my_google_books_library.xml
+++ b/WordRunnerSmartwatch/app/src/main/res/layout/activity_my_google_books_library.xml
@@ -25,7 +25,7 @@
 
     <Button
         android:id="@+id/button2"
-        android:onClick="startOAuthFlow"
+        android:onClick="getToken"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
