--- a/WordRunnerSmartwatch/app/src/main/res/layout/activity_my_google_books_library.xml
+++ b/WordRunnerSmartwatch/app/src/main/res/layout/activity_my_google_books_library.xml
@@ -10,11 +10,9 @@
     <Button
         android:id="@+id/button2"
         android:onClick="getToken"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="48dp"
         android:text="Button"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
@@ -24,36 +22,37 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="168dp"
-        android:layout_height="96dp"
-        android:layout_marginLeft="0dp"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="165dp"
+        android:layout_height="36dp"
+        android:text="TextView"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:maxLines="3"
+        android:scrollbars="vertical"
+        app:layout_constraintHorizontal_bias="0.444"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/button2" />
+
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_width="174dp"
+        android:layout_height="81dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="10dp"
-        android:layout_marginBottom="8dp">
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="5dp" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.666"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-    </ScrollView>
 </android.support.constraint.ConstraintLayout>
